fix: align logo

--- a/src/components/elements/PostFooter/styles.module.css
+++ b/src/components/elements/PostFooter/styles.module.css
@@ -10,8 +10,16 @@
 
 .container {
 	display: flex;
-	align-items: center;
 	gap: 2rem;
+}
+
+.logo {
+}
+
+.data {
+	& > * {
+		margin: 0 0 0.5rem 0 !important;
+	}
 }
 
 .date {
